# AcademicPracticeAutumn3Semestr

./: CMakeLists.txt  README.md
config/: python_algorithm.json
plugins/python_algorithm/: CMakeLists.txt  one_python_class_instance.h  python_algorithm.cpp  python_algorithm.h
plugins/python_algorithm/py_algorithms/: producer.py  sum.py
